tests/types_first_object_spread/types_first_object_spread.exp
Error ---------------------------------------------------------------------------------------------------- driver.js:8:1

Cannot cast `b1.x` to string because `void` (due to access of non-existent property `x`) [1] is incompatible with
string [2]. [incompatible-type]

   driver.js:8:1
   8| b1.x as string; // Error number ~> string
      ^^^^ [1]

References:
   driver.js:8:9
   8| b1.x as string; // Error number ~> string
              ^^^^^^ [2]


Error ---------------------------------------------------------------------------------------------------- driver.js:8:1

Cannot cast `b1.x` to string because number [1] is incompatible with string [2]. [incompatible-type]

   driver.js:8:1
   8| b1.x as string; // Error number ~> string
      ^^^^

References:
   test1.js:1:15
   1| type A = { x: number } | { y: number }
                    ^^^^^^ [1]
   driver.js:8:9
   8| b1.x as string; // Error number ~> string
              ^^^^^^ [2]


Error ---------------------------------------------------------------------------------------------------- driver.js:9:1

Cannot cast `b1.y` to string because `void` (due to access of non-existent property `y`) [1] is incompatible with
string [2]. [incompatible-type]

   driver.js:9:1
   9| b1.y as string; // Error, y may not exist, number ~> string
      ^^^^ [1]

References:
   driver.js:9:9
   9| b1.y as string; // Error, y may not exist, number ~> string
              ^^^^^^ [2]


Error ---------------------------------------------------------------------------------------------------- driver.js:9:1

Cannot cast `b1.y` to string because number [1] is incompatible with string [2]. [incompatible-type]

   driver.js:9:1
   9| b1.y as string; // Error, y may not exist, number ~> string
      ^^^^

References:
   test1.js:1:31
   1| type A = { x: number } | { y: number }
                                    ^^^^^^ [1]
   driver.js:9:9
   9| b1.y as string; // Error, y may not exist, number ~> string
              ^^^^^^ [2]


Error --------------------------------------------------------------------------------------------------- driver.js:10:1

Cannot cast `b1.z` to string because number [1] is incompatible with string [2]. [incompatible-type]

   driver.js:10:1
   10| b1.z as string; // Error, z may not exist, number ~> string
       ^^^^

References:
   test1.js:4:16
    4| const b = { z: 0, ...a };
                      ^ [1]
   driver.js:10:9
   10| b1.z as string; // Error, z may not exist, number ~> string
               ^^^^^^ [2]


Error --------------------------------------------------------------------------------------------------- driver.js:13:1

Cannot cast `b2.x` to string because number [1] is incompatible with string [2]. [incompatible-type]

   driver.js:13:1
   13| b2.x as string; // Error number ~> string
       ^^^^

References:
   test2.js:1:16
    1| const a = { x: 0 };
                      ^ [1]
   driver.js:13:9
   13| b2.x as string; // Error number ~> string
               ^^^^^^ [2]


Error --------------------------------------------------------------------------------------------------- driver.js:14:1

Cannot cast `b2.z` to string because number [1] is incompatible with string [2]. [incompatible-type]

   driver.js:14:1
   14| b2.z as string; // Error number ~> string
       ^^^^

References:
   test2.js:2:16
    2| const b = { z: 0, ...a };
                      ^ [1]
   driver.js:14:9
   14| b2.z as string; // Error number ~> string
               ^^^^^^ [2]


Error --------------------------------------------------------------------------------------------------- driver.js:17:1

Cannot cast `b3` to object type because inexact object literal [1] is incompatible with exact object type [2].
[incompatible-exact]

   driver.js:17:1
   17| b3 as { }; // Error inexact -> exact
       ^^

References:
   test3.js:2:18
    2| module.exports = { ...a };
                        ^^^^^^^^ [1]
   driver.js:17:7
   17| b3 as { }; // Error inexact -> exact
             ^^^ [2]


Error ----------------------------------------------------------------------------------------------------- test1.js:5:1

Cannot cast `b.x` to string because number [1] is incompatible with string [2]. [incompatible-type]

   test1.js:5:1
   5| b.x as string; // Error, might not be on b or will be number
      ^^^

References:
   test1.js:1:15
   1| type A = { x: number } | { y: number }
                    ^^^^^^ [1]
   test1.js:5:8
   5| b.x as string; // Error, might not be on b or will be number
             ^^^^^^ [2]


Error ----------------------------------------------------------------------------------------------------- test1.js:5:1

Cannot cast `b.x` to string because `void` (due to access of non-existent property `x`) [1] is incompatible with
string [2]. [incompatible-type]

   test1.js:5:1
   5| b.x as string; // Error, might not be on b or will be number
      ^^^ [1]

References:
   test1.js:5:8
   5| b.x as string; // Error, might not be on b or will be number
             ^^^^^^ [2]


Error ----------------------------------------------------------------------------------------------------- test1.js:6:1

Cannot cast `b.y` to string because number [1] is incompatible with string [2]. [incompatible-type]

   test1.js:6:1
   6| b.y as string; // Error, might not be on b or will be number
      ^^^

References:
   test1.js:1:31
   1| type A = { x: number } | { y: number }
                                    ^^^^^^ [1]
   test1.js:6:8
   6| b.y as string; // Error, might not be on b or will be number
             ^^^^^^ [2]


Error ----------------------------------------------------------------------------------------------------- test1.js:6:1

Cannot cast `b.y` to string because `void` (due to access of non-existent property `y`) [1] is incompatible with
string [2]. [incompatible-type]

   test1.js:6:1
   6| b.y as string; // Error, might not be on b or will be number
      ^^^ [1]

References:
   test1.js:6:8
   6| b.y as string; // Error, might not be on b or will be number
             ^^^^^^ [2]


Error ----------------------------------------------------------------------------------------------------- test1.js:7:1

Cannot cast `b.z` to string because number [1] is incompatible with string [2]. [incompatible-type]

   test1.js:7:1
   7| b.z as string; // Error number ~> string
      ^^^

References:
   test1.js:4:16
   4| const b = { z: 0, ...a };
                     ^ [1]
   test1.js:7:8
   7| b.z as string; // Error number ~> string
             ^^^^^^ [2]


Error ----------------------------------------------------------------------------------------------------- test2.js:3:1

Cannot cast `b.x` to string because number [1] is incompatible with string [2]. [incompatible-type]

   test2.js:3:1
   3| b.x as string;
      ^^^

References:
   test2.js:1:16
   1| const a = { x: 0 };
                     ^ [1]
   test2.js:3:8
   3| b.x as string;
             ^^^^^^ [2]


Error ----------------------------------------------------------------------------------------------------- test2.js:4:1

Cannot cast `b.z` to string because number [1] is incompatible with string [2]. [incompatible-type]

   test2.js:4:1
   4| b.z as string;
      ^^^

References:
   test2.js:2:16
   2| const b = { z: 0, ...a };
                     ^ [1]
   test2.js:4:8
   4| b.z as string;
             ^^^^^^ [2]



Found 15 errors
